Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/sourcePath2/SourcePath2.out
SourcePath2A.java:9:5: compiler.err.cant.resolve.location: kindname.class, this_should_not, , , (compiler.misc.location: kindname.class, p.Trash, null)
1 error
