Ports/jdk/jdk-jdk-18-10/test/langtools/tools/javac/sourcePath2/SourcePath2.java
/*
 * @test /nodynamiccopyright/
 * @bug 4648973
 * @summary compiler does not emit code for second class in source file
 * @author gafter
 *
 * @compile/fail/ref=SourcePath2.out -XDrawDiagnostics  SourcePath2.java
 */

import p.SourcePath2A;

public class SourcePath2 {}
